@@ -13,6 +13,8 @@ Xfdesktop 4.x.y
   * Make sure the background is reloaded on compositing changes.
   * Fix a crash on focus in when items are selected (bug #7313).
     Reported and fixed by Ambroz Bizjak.
+  * Fix moving files to the desktop via shift & drag (bug #7629).
+    Reported and fixed by Patrick Melo.
 
 
 Xfdesktop 4.8.0
